<resources>
    <string name="app_name">StudentHub</string>
    <string name="title_activity_bottom_navigation">StudentHub</string>


    <!-- Bottom Navigation Bar -->

    <string name="thong_tin">Thông tin</string>
    <string name="bang_tin">Bảng tin</string>
    <string name="trang_chu">Trang chủ</string>

    <!-- Home Screen -->

    <string name="giang_vien">Giảng viên</string>
    <string name="doan_va_hoi">Đoàn và Hội</string>
    <string name="day_hoc">Dạy học</string>
    <string name="viec_lam">Việc làm</string>

    <!-- Doan va Hoi -->

    <string name="header_doan_va_hoi">Hoạt động đoàn và hội</string>

    <!-- Day hoc -->

    <string name="header_day_hoc">Dạy học</string>

    <!-- Thong tin -->

    <string name="ten_ung_dung">Tên ứng dụng: StudentApp</string>
    <string name="ngay_phat_hanh">Ngày phát hành: 09/01/2019</string>
    <string name="phien_ban">Phiên bản: 1.0.0</string>
    <string name="nha_phat_trien">Nhà phát triển: Nguyễn Hửu Tài, Trần Ngọc Cường</string>
    <string name="gop_y">Góp ý: hstudent@gmail.com</string>

    <!-- Chi tiet cong viec -->

    <string name="job_header"></string>
    <string name="job_timer">Thời gian: </string>
    <string name="job_age">Tuổi: </string>
    <string name="job_degree">Bằng cấp: </string>
    <string name="job_exper">Kinh nghiệm: </string>
    <string name="job_gender">Giới tính: </string>
    <string name="job_deadline">Hạn nộp hồ sơ: </string>
    <string name="job_location">Địa điểm làm việc: </string>
    <string name="job_position">Vị trí công việc: </string>
    <string name="job_salary">Lương: </string>
    <string name="job_time_start">Thời gian bắt đầu: </string>
    <string name="job_time_trial">Thời gian thử việc: </string>
    <string name="job_contact">Liên hệ: </string>
    <string name="job_requirement">Yêu cầu công việc: </string>
    <string name="job_description">Mô tả công việc: </string>
    <string name="job_benefit">Quyền lợi: </string>

    <!-- Network state -->

    <string name="network_state">Hiện tại thiết bị của bạn vẫn chưa được kết nối với Internet. Hãy kết nối để có thể thực hiện nhiều thao tác hơn</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="spinner_ops">
        <item>Bảng tin</item>
        <item>Dạy học</item>
        <item>Việc làm</item>
    </string-array>

</resources>
